Fix overlapping highlight BG in `context-navigation`
This bug was not caused by the previous commits; rather, it was
introduced because of some changes in Nightly.

--- a/components/enhance_context_menu.css
+++ b/components/enhance_context_menu.css
@@ -12,7 +12,7 @@ panel, menupopup {
     --panel-border-radius: 8px !important;
 }
 
-#context-navigation > menuitem .menu-iconic-icon,
+#context-navigation > menuitem,
 menupopup:not(.in-menulist) > menuitem,
 menupopup > menu {
     border-radius: var(--arrowpanel-menuitem-border-radius) !important;
@@ -29,13 +29,13 @@ panel, menupopup {
     --panel-item-active-bgcolor: var(--toolbarbutton-active-background) !important;
 }
 
-#context-navigation > menuitem[_moz-menuactive] .menu-iconic-icon,
+#context-navigation > menuitem[_moz-menuactive],
 #main-window menupopup:not(.in-menulist) > menuitem[_moz-menuactive],
 #main-window menupopup > menu[_moz-menuactive] {
     background-color: var(--panel-item-hover-bgcolor) !important;
 }
 
-#context-navigation menuitem[_moz-menuactive][disabled] .menu-iconic-icon,
+#context-navigation menuitem[_moz-menuactive][disabled],
 #main-window menupopup > menuitem[_moz-menuactive][disabled] {
      background-color: color-mix(in srgb, var(--panel-item-hover-bgcolor) 50%, transparent) !important;
 }
